[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = {extras = ["dotenv"], version = "^1.10.13"}
matplotlib = "^3.10.3"
japanize-matplotlib = "^1.1.3"
jupyter = "^1.1.1"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
tqdm = "^4.67.1"
jupyterlab = "^4.4.5"
seaborn = "^0.13.2"
lightgbm = "^4.6.0"
plotly = "^6.2.0"
umap-learn = "^0.5.9.post2"
shap = "^0.48.0"
pyodbc = "^5.2.0"
streamlit = "^1.47.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
taskipy = "^1.13.0"
pyinstaller = "^6.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "poetry run python src/main.py"
lint = "poetry run flake8 src --show-source --statistics"
format = "poetry run black src"
build = "poetry run pyinstaller -y src/main.py"
build-one = "poetry run pyinstaller -y src/main.py --onefile"
test = "poetry run pytest"
